@@ -2,8 +2,11 @@ poppr 2.0.2.99
 ===========
 IMPROVEMENTS
 * `win.ia` and `samp.ia` gain a significant speedup thanks to Jonah Brooks implementing the code in C.
+
+NEW FEATURES
 * `poppr.msn`, `bruvo.msn`, and `plot_poppr_msn` gain the ability to take character vectors for color palettes. 
 * `plot_poppr_msn` returns the modified graph.
+* `aboot` gains the argument strata so that you can automatically convert genind to genpop.
 
 MISC
 * Documentation for genclone and snpclone classes are more coherent.
